k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-backend
  labels:
    app: dummy-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy-backend
  template:
    metadata:
      labels:
        app: dummy-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: dummy-backend
          image: ghcr.io/mirmozin-ini8/dummy-app-backend:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: dummy-backend
spec:
  selector:
    app: dummy-backend
  ports:
    - port: 8080
      targetPort: 8080
