k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-frontend
  labels:
    app: dummy-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy-frontend
  template:
    metadata:
      labels:
        app: dummy-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: dummy-frontend
          image: ghcr.io/mirmozin-ini8/dummy-app-frontend:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: dummy-frontend
spec:
  selector:
    app: dummy-frontend
  ports:
    - port: 80
      targetPort: 80
